--- a/so1rb_doc/EXPLORATION.html
+++ b/so1rb_doc/EXPLORATION.html
@@ -26,10 +26,10 @@ Dr Richard Bergmair
 <div id="about-this-document" class="slide section level1">
 <h1>0: About This Document</h1>
 <ul>
-<li>There is another document (<code>SOLUTION</code>) which describes my solution to the SO1 algorithm challenge. The present document (<code>EXPLORATION</code>) describes the thought process that got me to that solution. This is the part that usually people aren’t interested in. So if you’re not, stop reading this, and refer to the other document.</li>
+<li>There is another document (<code>SOLUTION</code>) which describes my solution to the SO1 algorithm challenge. The present document (<code>EXPLORATION</code>) is a braindump relating to the thought process that got me to that solution. This is the part that usually people aren’t interested in. So if you’re not, stop reading this, and refer to the other document.</li>
 <li>The code that goes with this thought process is under <code>so1rb_explore</code>.</li>
-<li>I’ve decided to do this in the form of a slide show, so I can walk you through it, one idea at a time, using a flat structure, and associating images with individual ideas.</li>
-<li>If I were actually called upon to do a presentation, this is not how I would normally structure a slide show. – Way too much text etc.</li>
+<li>I’ve decided to do this in the form of a slide show, so I can walk you through it, one idea at a time, using a flat structure, and associating images with individual ideas. If I were actually called upon to do a presentation, this is not how I would normally structure a slide show. Way too much text etc.</li>
+<li>I should stress that the absence of structure in this document is not a result of the fact that I’m incapable of coming up with descriptive section titles and structuring them in hierarchical form etc. Rather the absence of structure is supposed to centre-stage cognitive process over logical structure. (Think “brainstorming”, where no criticism is allowed, or “stream of consciousness technique” in creative writing, where you do a first draft without allowing for any kind of editing, so as not to get distracted too early).</li>
 </ul>
 </div>
 <div id="i-separated-out-some-development-data" class="slide section level1">
@@ -273,7 +273,7 @@ Dr Richard Bergmair
 <li>There was some variation in this result, as applied to the different subsamples (which is bad), but major portions of this clustering actually remained unaltered (which is good). In order to be able to proceed with only a single clustering, I decided to concatenate the four subsamples to get to a single clustering that I hoped would have some universality.</li>
 <li>The indexing on the dimensions starts with one, rather than zero.</li>
 <li>I apply a negative sign to all dimensions that have negative correlation with the first dimension in the cluster.</li>
-<li>This implies a frontend feature engineering step, whereby I turn the 70 individual dimensions into only 9 dimensions, each corresponding to a cluster. The value along each of the 9 dimensions is the average computed across those among the original 70 dimensions which are members of the cluster. For the dimensions with a negative sign, I flip the sign on the input value before adding it to the average.</li>
+<li>This implies a frontend feature engineering step, whereby I turn the 70 individual dimensions into only 10 dimensions, each corresponding to a cluster. The value along each of the 10 dimensions is the average computed across those among the original 70 dimensions which are members of the cluster. For the dimensions with a negative sign, I flip the sign on the input value before adding it to the average.</li>
 <li>The idea behind the sign flipping is something along these lines: If the first cluster is stock options on tech stocks, and dimension 6 is an IBM call (where the price goes up when IBM stock goes up), and dimension 11 is a Microsoft put (where the price goes down when the Microsoft stock goes up), then they will be correlated negatively. By adding them together, you are actually cancelling out the interesting part of the risk, rather than reinforcing it. So this is where the sign flipping comes in.</li>
 </ul>
 </div>
@@ -324,10 +324,42 @@ Dr Richard Bergmair
 <li>By taking the union over all sets of points thus classified as positives, an f-measure can be obtained for each pair of distance threshold and precision threshold.</li>
 <li>Applying this to the <code>data</code> subsample, an f-measure of 40.5% is obtained, using distance threshold 5.81 and precision threshold 23%.</li>
 <li>On the <code>all_data</code> subsample, capping at 2500 samples, that optimum f-measure comes in at 16.8% for precision threshold at 3%. This is explained, at least to some extent, by the lower proportion of positives among the <code>all_data</code> subsample vs the <code>data</code> subsample. The distance threshold is at a nearby location, at 4.98.</li>
-<li>The above numbers were obtained using only those dimensions that weren’t discarded as irrelevant by the feature engineering study from step 14. Using all of the 70 dimensions instead (moving back to subsample <code>data</code>, rather than <code>all_data</code>), the optimal f-measure comes in at 39%, so it does seem like there is some noise in some of those extraneous dimensions discarded by the feature engineering.</li>
+<li>The above numbers were obtained using only those dimensions that weren’t discarded as irrelevant by the feature engineering study from step 14. Using all of the 70 dimensions instead (and moving back to subsample <code>data</code>, rather than <code>all_data</code>), the optimal f-measure comes in at 39%, so it does seem like there is some noise in some of those extraneous dimensions discarded by the feature engineering.</li>
 <li>During development, I also used a set of three randomly chosen dimensions (0, 21, 42) for testing purposes. Oddly enough, it turned out that, at 40% f-measure, it does almost as well that the run using all of the dimensions (as chosen by the feature engineering from step 14).</li>
 <li>Using the Mahalanobis distance, instead of the regular Euclidean distance on this set of three dimensions, we can get as high as 41% f-measure.</li>
 <li>The fact that this 41% result is the best we’ve managed to obtain in this experiment, and that it relies on three randomly chosen dimensions suggests, that there is scope for further work on feature engineering and dimensionality reduction.</li>
+</ul>
+</div>
+<div id="exploring-the-neighborhood-some-more" class="slide section level1">
+<h1>18: Exploring The Neighborhood Some More</h1>
+<ul>
+<li>So, the obvious next step is to apply the feature engineering from step 14 properly, i.e. actually doing the averages across the clusters, rather than just using them to select the dimensions to keep vs the dimensions to discard.</li>
+<li>In a first step, I used the original output from step 14, thus reducing the dimensionality from 70 down to 10, and repeated the experiment from step 17 with that piece of feature engineering in place. That gets us to 42.17% f-measure.</li>
+<li>Then I retried with the clustering that came out of the manual fiddling in step 15, so reducing from 70 down to 3 dimensions. Despite the heavy reduction in dimensionality, this still yields 41.5% f-measure, reinforcing the sense I’ve gained from the analyses in steps 11 and 17 that the dimensionality of this classifier need not exceed three.</li>
+<li>To be thorough, I would need to re-check that this conclusion still holds for the other subsamples, but in this case, I chose to skip that.</li>
+<li>Then I tried switching to Mahalanobis: This yielded 41.1% f-measure. Since the feature engineering already produces a feature space that is very close to uncorrelated, there is little gain to be made through the use of an additional decorrelation technique such as Mahalanobis.<br /></li>
+<li>But I chose to think about it differently: This shows that, even though Mahalanobis doesn’t help it also doesn’t do any significant amount of damage, so for the sake of convenience, I decided to leave it in throughout the rest of this project, just so that correlation is one fewer thing to worry about.</li>
+</ul>
+</div>
+<div id="exploring-the-neighborhood-even-more" class="slide section level1">
+<h1>19: Exploring The Neighborhood Even More</h1>
+<ul>
+<li>So, all of this amounts to a workable approach to doing the feature engineering for this classifier, but it’s still prudent to compare whatever I came up with, with whatever the good folks at <a href="http://scikit-learn.org/">scikit-learn</a> came up with in terms of general purpose feature engineering methods.</li>
+<li>After trying through the out-of-the-box method for <a href="http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html">PCA</a>, as well as <a href="http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.KernelPCA.html">Kernel PCA</a> with various different kernels, it turned out that the cosine kernel performed pretty well, at 42.50% f-measure.</li>
+</ul>
+</div>
+<div id="look-at-this-in-a-plot" class="slide section level1">
+<h1>20: Look At This In A Plot</h1>
+<p><img src="step20a.png" /> <img src="step20b.png" /></p>
+<ul>
+<li>So, I thought I should really look at this in a plot, before taking it any further. This is what it looks like for subsamples <code>data</code> (top) and <code>all_data</code> (bottom).</li>
+</ul>
+</div>
+<div id="conclusion" class="slide section level1">
+<h1>Conclusion</h1>
+<ul>
+<li>So this process of exploration exposed me to a semi-structured set of experiences with this dataset that informed the design of a submission-ready solution.</li>
+<li>You may now delete the code under <code>so1rb_exploration</code> and continue your reading with document `SOLUTION`` to find out about how I put everything together.</li>
 </ul>
 </div>
 </body>
